--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://wor101.github.io/personal-site/",
+  "homepage": "https://www.willrossen.com/",
   "name": "personal-site",
   "version": "0.1.0",
   "private": true,
